<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/name"
       android:hint="@string/imi_i_nazwisko"/>
   <Spinner
       android:id="@+id/spinner"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginStart="50dp"
       android:layout_marginTop="20dp" />

   <com.google.android.material.slider.Slider
       android:id="@+id/slider"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:stepSize="1"

       />

   <ImageView
       android:layout_width="106dp"
       android:layout_height="76dp"
       android:src="@drawable/myszklaw"/>

   <CheckBox
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/dodaj_myszki_i_klawiatury_800_z_x_ilo"
       android:id="@+id/myszklaw"
       />
   <ImageView
       android:layout_width="106dp"
       android:layout_height="76dp"
       android:src="@drawable/monit"/>
   <CheckBox
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/dodaj_monitory_1000_z_x_ilo"
       android:id="@+id/monit"
       />
   <ImageView
       android:layout_width="106dp"
       android:layout_height="76dp"
       android:src="@drawable/tablet"/>
   <CheckBox
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/dodaj_tablety_graficzne_500_z_x_ilo"
       android:id="@+id/tablety"
       />

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/zam_w"
       android:id="@+id/zamow"
       />

</LinearLayout>